# stronger-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  make-header-only.py  readme.md  version.py
.github/workflows/: ci.yml  cpm.yml  release.yml
includes/: strong_type.hpp  stronger.hpp  tag.hpp
includes/concepts/: arithmetic_operators.hpp  assignment_operators.hpp  comparison_operators.hpp  increment_and_decrement_operators.hpp  iterators.hpp  logical_operators.hpp  other_operators.hpp  stl_utils.hpp
includes/traits/: traits.hpp
tests/: helpers.h  mock_type.hpp  runtime_tests.cpp  test_arithmetic.cpp  test_bool.cpp  test_data_accessors.cpp  test_declaration_macros.cpp  test_iterable.cpp  test_link.cpp  test_make_strong.cpp  test_operation_bindings.cpp  test_options.cpp  test_sizes.cpp  test_strength.cpp  test_tag.cpp  test_types.cpp  test_version.cpp
tests/benchmarks/: benchmarks.cpp  compile-time.cpp  compile-time.py  get-NamedType.py  results.md.template
tests/cpm/: CMakeLists.txt.template  main.cpp  test_cpm.sh
tests/test_link/: api1.cpp  api1.hpp  common.cpp  common.hpp
